fix(Settings): Always use ChildContainer
othersize content is rendered off screen

--- a/common/app/routes/Settings/settings.less
+++ b/common/app/routes/Settings/settings.less
@@ -15,6 +15,9 @@
   }
 }
 
+.@{ns}-container {
+  .center(@value: @container-xl, @padding: @grid-gutter-width);
+}
 .@{ns}-skeleton {
   background-color: #fff;
   z-index: 10;
